--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -141,6 +141,7 @@ img{
 @import "componets/pagination";
 @import "componets/articles-inner";
 @import "componets/pagination-inner";
+@import "componets/calculator";
 
 
 
