--- a/src/scss/componets/calculator.scss
+++ b/src/scss/componets/calculator.scss
@@ -32,6 +32,72 @@
 		letter-spacing: 0.05em;
 		color: #000000;
 	}
+	&__modal{
+		display: flex;
+		margin: auto;
+		justify-content: center;
+		img{
+			max-width: 100%;
+		}
+	}
+	&__modal-item{
+		background-color: #fff;
+		background-image: url("../img/check-bg.png");
+		background-repeat: no-repeat;
+		background-size: cover;
+		padding: 49px 55px 25px 25px;
+		max-width: 380px;
+		height: 543px;
+	}
+	&__modal-logo{
+		margin-bottom: 26px;
+	}
+	&__modal-title{
+		font-weight: bold;
+		font-size: 12px;
+		line-height: 25px;
+		letter-spacing: 0.05em;
+		color: #000000;
+		margin-bottom: 10px;
+		padding: 0 10px;
+	}
+	&__code{
+		text-align: center;
+		font-weight: bold;
+		font-size: 12px;
+		line-height: 25px;
+		letter-spacing: 0.05em;
+		text-transform: capitalize;
+		color: #4D4D4D;
+	}
+	.table{
+		margin-bottom: 0;
+		font-size: 9px;
+		&> :not(caption) > * > *{
+			padding: 0 10px 22px;
+			border-bottom-width: 0;
+		}
+		td{
+			&:first-child{
+				max-width: 157px;
+			}
+			&:last-child{
+				text-align: right;
+			}
+
+		}
+		tfoot{
+
+			font-size: 12px;
+			line-height: 25px;
+			letter-spacing: 0.05em;
+			text-transform: capitalize;
+			color: #000000;
+			td{
+				font-weight: bold;
+			}
+		}
+	}
 	.form-group{
 		display: flex;
 		align-items: center;
@@ -55,6 +121,12 @@
 		line-height: 21px;
 		text-align: center;
 		color: #8A8383;
+
+		&::-webkit-outer-spin-button,
+		&::-webkit-inner-spin-button {
+			-webkit-appearance: none;
+			margin: 0;
+		}
 		&::placeholder{
 			color: #8A8383;
 		}
