--- a/src/scss/componets/rent.scss
+++ b/src/scss/componets/rent.scss
@@ -36,12 +36,15 @@
         img{
             display: block;
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
 
     &__row{
         display: flex;
         gap: 20px;
+        flex-wrap: wrap;
         margin-bottom: 73px;
     }
     &__row-item{
@@ -97,6 +100,42 @@
         margin: 73px 0;
         img{
             border-radius: 10px;
+        }
+    }
+    @include r(767){
+        margin: 10px 0 30px;
+        &__header{
+            margin-bottom: 19px;
+        }
+        &__title{
+            text-align: center;
+            font-size: 24px;
+            line-height: 35px;
+            margin: 0 0 16px;
+        }
+        &__subtitle{
+            font-size: 16px;
+            line-height: 35px;
+        }
+        &__figure{
+            height: 182px;
+            margin: 0 -20px 19px;
+        }
+        &__row{
+            gap: 6px;
+            margin-bottom: 19px;
+        }
+        &__row-item{
+            flex: 1 0 100%;
+            max-width: 100%;
+        }
+        &__row-title{
+            font-size: 14px;
+            line-height: 35px;
+        }
+        &__gallery{
+            gap: 30px;
+            margin: 18px 0;
         }
     }
 }
